This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - support clustered setups
          - add rest api
          - add command_enabled option

2.22     Fri Jun 29 13:52:11 CEST 2018
          - cleanup preferences popup
          - add user profile page
          - add timezone setting to users profile page
          - add require_comments_for_disable_cmds option
          - move broadcast into side navigation
          - move important filters up (#792)
          - support macros in action menu onclicks
          - fix wrong number of backends (#809)
          - fix custom variable filters (#816)
          - deprecate shadownaemon
          - renamed cli livecache cmd to lmd
          - add option show_contacts to list contacts on extinfo page
          - add logcache fetchlogs option and add example scripts for ido
          - Broadcasts:
            - add template checkbox
            - add macro support
            - add frontmatter support
          - Panorama:
            - optionally show broadcasts in panorama dashboards
            - make determing worst state for group/filter icons configurable
            - add new configuration option 'default_state_order'
            - add view permission option to icon widgets
            - fix tab rotation
          - Config Tool:
            - make command line a textarea
            - use separate edit sessions for each user
            - list outside references when deleting hosts and services like dashboards or reports
            - fix adding custom variables from extra_custom_var
          - Business Process:
            - calculate results parallel if there are many bps
            - add details link to each node
            - add max_check_attempts to bp nodes
          - Reporting:
            - add datetime format options
            - use time locale for reports
            - optionally use host / servicename from alias, displayname or customvariable